Bug #123457 --> fix some thread safety assertion warnings by making sure the notifications callback for the socket gets released on the UI thread. r/sr=bienvenu